fix: change styles for correct image stretching

--- a/app/[locale]/(pages)/about/rules_of_appeal/rules/styles/rules.module.scss
+++ b/app/[locale]/(pages)/about/rules_of_appeal/rules/styles/rules.module.scss
@@ -51,7 +51,7 @@
 
   .ruleImage {
     position: relative;
-    min-height: 100%;
+    min-height: 220px;
     object-fit: cover;
     object-position: center;
   }
